minor fix on footer color contrast

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 /* Highlight current position in Navbar */
-.nav-item-current {
-    background-color: white;
-}
-
 .nav-item-current > .nav-link {
     color: black !important;
+}
+
+.nav-item-current {
+    background-color: white;
 }
 
 .hero {
@@ -24,6 +24,10 @@
 #banner-text {
     color: black;
     font-size: 2em;
+}
+
+#copyright-text {
+    color: white;
 }
 
 .img-caption {
